force-app/main/default/objects/Agent_Event__c/Agent_Event__c.object-meta.xml
<CustomObject>
    <description>One agent call: request, response, source refs, tokens. Append-only audit log.</description>
    <label>Agent Event</label>
    <nameField>
        <displayFormat>AE-{0000000}</displayFormat>
        <label>Agent Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>