force-app/main/default/objects/Agent_Event__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desk</fullName>
            </value>
            <value>
                <fullName>Ops Brief</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>