force-app/main/default/objects/Agent_Event__c/fields/Desk_Question__c.field-meta.xml
<CustomField>
    <fullName>Desk_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Desk Question</label>
    <referenceTo>Desk_Question__c</referenceTo>
    <relationshipLabel>Agent Events</relationshipLabel>
    <relationshipName>Agent_Events</relationshipName>
    <type>Lookup</type>
</CustomField>