force-app/main/default/objects/Agent_Event__c/fields/Input_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Input_Tokens__c</fullName>
    <label>Input Tokens</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>