force-app/main/default/objects/Agent_Event__c/fields/Output_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Output_Tokens__c</fullName>
    <label>Output Tokens</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>