force-app/main/default/objects/Agent_Event__c/fields/Source_Refs__c.field-meta.xml
<CustomField>
    <fullName>Source_Refs__c</fullName>
    <description>JSON array of source_refs cited in the response.</description>
    <label>Source Refs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>