force-app/main/default/objects/Agent_Event__c/fields/Tool_Name__c.field-meta.xml
<CustomField>
    <fullName>Tool_Name__c</fullName>
    <label>Tool Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>